# harnspec

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  clippy_output.txt  git_log.txt  log.txt  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  reproduce_missing_field.rs  skills-lock.json  turbo.json  typecheck_err.txt  typecheck_full_err.txt  ui_typecheck_err.txt
.husky/: pre-push
deploy/: README.md  (+2 more)
rust/: Cargo.toml  README.md  clippy.toml
rust/harnspec-cli/: Cargo.toml
rust/harnspec-cli/src/: cli_args.rs  main.rs
rust/harnspec-cli/src/commands/: agent.rs  analyze.rs  archive.rs  backfill.rs  board.rs  check.rs  children.rs  compact.rs  create.rs  deps.rs  examples.rs  files.rs  gantt.rs  git_repo.rs  init.rs  list.rs  mcp.rs  migrate.rs  migrate_archived.rs  mod.rs  open.rs  proposal.rs  rel.rs  runner.rs  search.rs  session.rs  skill.rs  split.rs  stats.rs  templates.rs  timeline.rs  tokens.rs  ui.rs  update.rs  validate.rs  view.rs
rust/harnspec-cli/src/commands/init/: ai_tools.rs  mcp_config.rs
rust/harnspec-cli/src/commands/tui/: app.rs  board.rs  detail.rs  filter.rs  keybindings.rs  list.rs  mod.rs  project_switcher.rs  projects.rs  theme.rs
rust/harnspec-cli/templates/: AGENTS-with-skill.md  AGENTS.md
rust/harnspec-cli/templates/skills/harnspec/: SKILL.md
rust/harnspec-cli/tests/: board.rs  create_template.rs  init.rs  list.rs  regression.rs  search.rs  session.rs  session_startup.rs  spec_lifecycle.rs  tokens.rs  tui_e2e.rs  validate.rs
rust/harnspec-cli/tests/common/: mod.rs
rust/harnspec-core/: Cargo.toml
rust/harnspec-core/migrations/: 0001_initial_schema.sql
rust/harnspec-core/src/: error.rs  lib.rs  relationships.rs
rust/harnspec-core/src/ai/: mod.rs
rust/harnspec-core/src/ai_native/: README.md  chat.rs  error.rs  mod.rs  providers.rs  runner_config.rs  streaming.rs  types.rs
rust/harnspec-core/src/ai_native/tools/: helpers.rs  inputs.rs  mod.rs  registry.rs
rust/harnspec-core/src/compute/: insights.rs  stats.rs
rust/harnspec-core/src/db/: mod.rs
rust/harnspec-core/src/git/: clone_manager.rs  mod.rs  types.rs
rust/harnspec-core/src/io/: discovery.rs  templates.rs
rust/harnspec-core/src/models_registry/: bridge.rs  cache.rs  client.rs  mod.rs  types.rs
rust/harnspec-core/src/parsers/: frontmatter.rs
rust/harnspec-core/src/search/: filters.rs  mod.rs  scorer.rs
rust/harnspec-core/src/sessions/: database.rs  mod.rs  runner.rs  types.rs  worktree.rs
rust/harnspec-core/src/sessions/manager/: lifecycle.rs  mod.rs  queries.rs
rust/harnspec-core/src/spec_ops/: archiver.rs  graph.rs  loader.rs  mod.rs  writer.rs
rust/harnspec-core/src/storage/: chat_config.rs  chat_store.rs  config.rs  mod.rs  project_registry.rs
rust/harnspec-core/src/types/: config.rs  mod.rs
rust/harnspec-core/src/validators/: completion.rs  frontmatter.rs  line_count.rs  structure.rs  token_count.rs
rust/harnspec-http/: Cargo.toml
rust/harnspec-http/src/: chat_config.rs  chat_store.rs  config.rs  error.rs  lib.rs  main.rs  project_registry.rs  routes.rs  state.rs  sync_state.rs  watcher.rs
rust/harnspec-http/src/ai/: mod.rs
rust/harnspec-http/src/handlers/: capabilities.rs  chat_config.rs  chat_handler.rs  chat_sessions.rs  events.rs  git.rs  health.rs  local_projects.rs  mod.rs  models_registry.rs  projects.rs  server.rs  sync.rs
rust/harnspec-http/src/handlers/sessions/: mod.rs  runners.rs  session_handlers.rs
rust/harnspec-http/src/handlers/specs/: compute.rs  helpers.rs  read.rs  write.rs
rust/harnspec-http/src/middleware/: auth.rs
rust/harnspec-http/src/sessions/: mod.rs
rust/harnspec-http/src/types/: common.rs  mod.rs  runners.rs  sessions.rs  specs.rs
rust/harnspec-http/tests/: deps_test.rs  error_handling_test.rs  export_bindings.rs  projects_test.rs  scenarios_test.rs  search_test.rs  server_integration_test.rs  specs_test.rs  stats_test.rs  validate_test.rs
rust/harnspec-http/tests/common/: fixtures.rs
rust/harnspec-mcp/: Cargo.toml
rust/harnspec-mcp/src/: lib.rs  main.rs  protocol.rs
rust/harnspec-mcp/src/tools/: board.rs  children.rs  create.rs  deps.rs  helpers.rs  list.rs  mod.rs  relationships.rs  search.rs  stats.rs  tokens.rs  update.rs  validate.rs  validation.rs  view.rs
rust/harnspec-mcp/tests/: mcp_tests.rs
rust/harnspec-mcp/tests/helpers/: mod.rs
rust/harnspec-mcp/tests/integration/: e2e.rs  mod.rs  workflows.rs
rust/harnspec-mcp/tests/protocol/: errors.rs  handshake.rs  json_rpc.rs  mod.rs
rust/harnspec-mcp/tests/tools/: board.rs  create.rs  list.rs  mod.rs  search.rs  stats.rs  tokens.rs  update.rs  validate.rs  view.rs
rust/harnspec-sync-bridge/: Cargo.toml
rust/harnspec-sync-bridge/src/: main.rs
rust/leanspec-cli/: Cargo.toml
rust/leanspec-cli/src/: cli_args.rs  main.rs
rust/leanspec-cli/src/commands/: create.rs  github.rs  init.rs  mod.rs  session.rs  skill.rs  update.rs
rust/leanspec-cli/src/commands/tui/: app.rs  board.rs  deps.rs  detail.rs  help.rs  keybindings.rs  list.rs  mod.rs  project_switcher.rs  projects.rs  search.rs  theme.rs
rust/leanspec-cli/tests/: create.rs  init.rs  session.rs
rust/leanspec-cli/tests/common/: mod.rs
rust/leanspec-core/: Cargo.toml
rust/leanspec-core/src/: lib.rs
rust/leanspec-core/src/git/: clone_manager.rs
rust/leanspec-core/src/github/: client.rs  mod.rs  types.rs
rust/leanspec-core/src/sessions/: database.rs  mod.rs  runner.rs  worktree.rs
rust/leanspec-core/src/spec_ops/: loader.rs
rust/leanspec-core/src/storage/: chat_store.rs  config.rs  project_registry.rs
rust/leanspec-http/: Cargo.toml
rust/leanspec-http/src/: lib.rs  main.rs  routes.rs  state.rs
rust/leanspec-http/src/handlers/: github.rs  health.rs  mod.rs  projects.rs  sync.rs
rust/leanspec-http/src/types/: legacy.rs  runners.rs
rust/leanspec-http/tests/: export_bindings.rs
rust/leanspec-mcp/: Cargo.toml
rust/leanspec-mcp/src/tools/: create.rs
rust/leanspec-mcp/tests/tools/: create.rs  update.rs
rust/npm-dist/: binary-wrapper.js  mcp-wrapper.js  package.json.example
(+356 files in other folders)
