[workspace]
exclude = [
  "leanspec-sync-bridge", # deprecated
]
members = [
  "leanspec-core",
  "leanspec-cli",
  "leanspec-mcp",
  "leanspec-http",
]
resolver = "2"

[workspace.package]
authors = ["LeanSpec Contributors"]
description = "Lightweight spec methodology for AI-powered development"
edition = "2021"
homepage = "https://lean-spec.dev"
license = "MIT"
repository = "https://github.com/codervisor/lean-spec"
rust-version = "1.80"
version = "0.2.27"

[workspace.dependencies]
# Core dependencies
chrono = {version = "0.4", features = ["serde"]}
petgraph = "0.8"
regex = "1.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tiktoken-rs = "0.6"
walkdir = "2.5"

# CLI dependencies
clap = {version = "4.5", features = ["derive", "color"]}
colored = "3.0"
dialoguer = "0.11"
indicatif = "0.17"

# Async runtime
tokio = {version = "1.42", features = ["full"]}

# Testing
pretty_assertions = "1.4"
tempfile = "3.14"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
