[package]
authors.workspace = true
description = "Command-line interface for HarnSpec"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "harnspec-cli"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "harnspec"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
colored.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
harnspec-core = {path = "../harnspec-core", features = ["sessions", "storage", "git"]}
notify = "6"
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
walkdir.workspace = true
dunce = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
chrono.workspace = true
predicates = "3.1"
pretty_assertions.workspace = true
regex.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
