[package]
authors.workspace = true
description = "HarnSpec Sync Bridge for cloud/local sync"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "harnspec-sync-bridge"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "harnspec-sync-bridge"
path = "src/main.rs"

[dependencies]
harnspec-core = {path = "../harnspec-core"}

anyhow = "1.0"
chrono.workspace = true
clap.workspace = true
dirs = "5.0"
futures-util = "0.3"
hostname = "0.4"
notify = "6.1"
reqwest = {version = "0.12", features = ["json", "rustls-tls"]}
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-tungstenite = {version = "0.26", features = ["rustls-tls-native-roots"]}
tokio.workspace = true
url = "2.5"
uuid = {version = "1.10", features = ["v4", "v5"]}
