[package]
authors.workspace = true
description = "Core library for LeanSpec - spec parsing, validation, sessions, storage, and AI worker management"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "leanspec-core"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "leanspec_core"
path = "src/lib.rs"

[dependencies]
# AI provider libraries (optional)
agent-client-protocol = {version = "0.9.4", optional = true}
anthropic = {version = "0.0.8", optional = true}
async-openai = {version = "0.32", optional = true, features = ["chat-completion"]}
chrono.workspace = true
futures-util = {version = "0.3", optional = true}
petgraph.workspace = true
regex.workspace = true
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"], optional = true}
base64 = {version = "0.22", optional = true}
schemars = {version = "0.8", optional = true}
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tiktoken-rs.workspace = true
ts-rs = {version = "10.1", features = ["chrono-impl", "no-serde-warnings"]}
urlencoding = {version = "2.1", optional = true}
walkdir.workspace = true

# Optional dependencies for infrastructure features
async-trait = {version = "0.1", optional = true}
dirs = {version = "5.0", optional = true}
flate2 = {version = "1.0", optional = true}
rusqlite = {version = "0.31", features = ["bundled"], optional = true}
tokio = {workspace = true, optional = true}
uuid = {version = "1.10", features = ["v4"], optional = true}
which = {version = "6.0", optional = true}

[target.'cfg(unix)'.dependencies]
nix = {version = "0.28", default-features = false, features = ["signal"]}

[features]
ai = ["tokio", "async-trait", "uuid", "async-openai", "anthropic", "schemars", "reqwest", "urlencoding", "futures-util"]
default = []
full = ["sessions", "storage", "ai", "github"]
github = ["reqwest", "base64"]
sessions = ["rusqlite", "tokio", "uuid", "async-trait", "which", "flate2", "agent-client-protocol"]
storage = ["rusqlite", "tokio", "dirs", "uuid"]

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
