[package]
name = "leanspec-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "DEPRECATED: MCP (Model Context Protocol) server for LeanSpec"

[lib]
name = "leanspec_mcp"
path = "src/lib.rs"

[[bin]]
name = "leanspec-mcp"
path = "src/main.rs"

[dependencies]
leanspec-core = { path = "../leanspec-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
tokio-test = "0.4"
assert-json-diff = "2.0"
